--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -1,4 +1,6 @@
+<%- include("partials/head")%>
 <h1 class="mt-4">Dashboard</h1>
 <p class="lead mb-3">Welcome <%= user.name %></p>
-<a href="/admin/panel" class="btn btn-danger">Admin</a>
-<a href="/users/logout" class="btn btn-secondary">Logout</a>
+<p class="lead mb-2">Your Coin <%= user.Coin %></p>
+<p class="lead mb-3">ID: <%= user._id %></p> 
+
